k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickup-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickup-app
  template:
    metadata:
      labels:
        app: pickup-app
    spec:
      containers:
      - name: backend
        image: krmp-d2hub-idock.9rum.cc/dev-test/repo_7b9f0e9e3499
        ports:
        - containerPort: 8080
