k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickup-mysql-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickup-mysql
  template:
    metadata:
      labels:
        app: pickup-mysql
    spec:
      containers:
      - name: mysql
        image: mysql/mysql-server:8.0.27
        ports:
        - containerPort: 3306
