k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pickup-app-service
spec:
  ports:
  - port: 8080
  selector:
    app: pickup-app
