k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pickup-mysql-dev
spec:
  ports:
  - port: 3306
  selector:
    app: pickup-mysql
